# gfg-hackathon

./: README.md  app.py  checking.ipynb  checking.py  client.py  langgraph.ipynb  main.py  manim_Server.py  manim_server_fast_api.py  pyproject.toml  streamlit_Frontend.py  streamlit_backend.py  testing.ipynb  todo.md
media/manim_tmp/: scene.py
qdrant_data/: meta.json
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_090a05cd/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_09243e7d/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_13fe174d/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_17537c5d/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_2620f550/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_34516864/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_408c7d0d/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_413abf36/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_4656fab8/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_518a6a91/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_5c09c473/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_90d4bf76/: storage.sqlite
qdrant_data/collection/pdf_"1e8ebfdc-6855-49d0-8c8d-fc78601c0e99"_a10d8b43/: storage.sqlite
(+40 files in other folders)
